# tinkoder-site

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  palvelut.html  portfolio.html  robots.txt  sitemap.xml  tietoa.html  tietosuoja.html  yhteys.html
_dev/: build_pages.py  content_pages.py
_dev/admin/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
_dev/admin/app/: __init__.py  auth.py  content.py  git_ops.py  main.py  media.py  pages.py  sync.py
_dev/admin/static/: admin.css
_dev/admin/templates/: _nav.html  index.html  login.html  page_edit.html
_dev/admin/tests/: conftest.py  test_auth.py  test_content.py  test_git_ops.py  test_main.py  test_media.py  test_sync.py
_dev/portfolio-pipeline/: common.py  curate_prefilter.py  edit.py  pyproject.toml  review.html
css/: animations.css  styles.css
en/: about.html  contact.html  index.html  portfolio.html  privacy.html  services.html
js/: script.js
