[project]
name = "tinkoder-admin"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pillow>=12.3.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
